decoder improvements, encoder development in progress

--- a/ber.vcxproj
+++ b/ber.vcxproj
@@ -93,14 +93,22 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="asn1\ber\decoder.h" />
-    <ClInclude Include="inc\asn1\ber\basic_decoder.h" />
-    <ClInclude Include="inc\asn1\ber\decoder.h" />
-    <ClInclude Include="inc\asn1\ber\field_decoder\base.h" />
-    <ClInclude Include="inc\asn1\ber\field_decoder\length.h" />
-    <ClInclude Include="inc\asn1\ber\field_decoder\simple.h" />
-    <ClInclude Include="inc\asn1\ber\field_decoder\tag.h" />
-    <ClInclude Include="inc\asn1\ber\field_decoder\value.h" />
-    <ClInclude Include="inc\asn1\ber\printer.h" />
+    <ClInclude Include="inc\asn1\ber\decoder\basic.h" />
+    <ClInclude Include="inc\asn1\ber\decoder\engine.h" />
+    <ClInclude Include="inc\asn1\ber\encoder\base.h" />
+    <ClInclude Include="inc\asn1\ber\encoder\sequence.h" />
+    <ClInclude Include="inc\asn1\ber\encoder\value.h" />
+    <ClInclude Include="inc\asn1\ber\decoder\field\base.h" />
+    <ClInclude Include="inc\asn1\ber\decoder\field\length.h" />
+    <ClInclude Include="inc\asn1\ber\decoder\field\simple.h" />
+    <ClInclude Include="inc\asn1\ber\decoder\field\tag.h" />
+    <ClInclude Include="inc\asn1\ber\decoder\field\value.h" />
+    <ClInclude Include="inc\asn1\ber\encoder\field\base.h" />
+    <ClInclude Include="inc\asn1\ber\encoder\field\length.h" />
+    <ClInclude Include="inc\asn1\ber\encoder\field\simple.h" />
+    <ClInclude Include="inc\asn1\ber\encoder\field\tag.h" />
+    <ClInclude Include="inc\asn1\ber\encoder\field\value.h" />
+    <ClInclude Include="inc\asn1\ber\decoder\printer.h" />
     <ClInclude Include="inc\asn1\ber\types.h" />
     <ClInclude Include="inc\asn1\ber\pch.h" />
   </ItemGroup>
@@ -110,7 +118,11 @@
     <ClCompile Include="src\asn1\ber\pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="tst\test.cpp" />
+    <ClCompile Include="tst\decoder_test.cpp" />
+    <ClCompile Include="tst\encoder_test.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
