--- a/ber.vcxproj
+++ b/ber.vcxproj
@@ -96,7 +96,7 @@
     <ClInclude Include="inc\asn1\ber\decoder\basic.h" />
     <ClInclude Include="inc\asn1\ber\decoder\engine.h" />
     <ClInclude Include="inc\asn1\ber\encoder\base.h" />
-    <ClInclude Include="inc\asn1\ber\encoder\sequence.h" />
+    <ClInclude Include="inc\asn1\ber\encoder\structure.h" />
     <ClInclude Include="inc\asn1\ber\encoder\value.h" />
     <ClInclude Include="inc\asn1\ber\decoder\field\base.h" />
     <ClInclude Include="inc\asn1\ber\decoder\field\length.h" />
@@ -105,9 +105,7 @@
     <ClInclude Include="inc\asn1\ber\decoder\field\value.h" />
     <ClInclude Include="inc\asn1\ber\encoder\field\base.h" />
     <ClInclude Include="inc\asn1\ber\encoder\field\length.h" />
-    <ClInclude Include="inc\asn1\ber\encoder\field\simple.h" />
     <ClInclude Include="inc\asn1\ber\encoder\field\tag.h" />
-    <ClInclude Include="inc\asn1\ber\encoder\field\value.h" />
     <ClInclude Include="inc\asn1\ber\decoder\printer.h" />
     <ClInclude Include="inc\asn1\ber\types.h" />
     <ClInclude Include="inc\asn1\ber\pch.h" />
@@ -118,11 +116,11 @@
     <ClCompile Include="src\asn1\ber\pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="tst\decoder_test.cpp" />
-    <ClCompile Include="tst\encoder_test.cpp">
+    <ClCompile Include="tst\decoder_test.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="tst\encoder_test.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
