--- a/ber.vcxproj
+++ b/ber.vcxproj
@@ -69,6 +69,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <RandomizedBaseAddress>false</RandomizedBaseAddress>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -111,7 +112,6 @@
     <ClInclude Include="inc\asn1\ber\pch.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\asn1\ber\printer.cpp" />
     <ClCompile Include="src\asn1\ber\types.cpp" />
     <ClCompile Include="src\asn1\ber\pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
