--- a/ber.vcxproj.filters
+++ b/ber.vcxproj.filters
@@ -3,8 +3,8 @@
   <ItemGroup>
     <ClCompile Include="src\asn1\ber\types.cpp" />
     <ClCompile Include="src\asn1\ber\pch.cpp" />
-    <ClCompile Include="tst\decoder_test.cpp" />
-    <ClCompile Include="tst\encoder_test.cpp" />
+    <ClCompile Include="tst\decoding\decoder_test.cpp" />
+    <ClCompile Include="tst\encoding\encoder_test.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="asn1\ber\decoder.h" />
