improvements; added test project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,6 @@ add_library(lib ${CMAKE_SOURCE_DIR}/asn1/ber/pch.cpp ${CMAKE_SOURCE_DIR}/asn1/be
 target_include_directories(lib PUBLIC ${CMAKE_SOURCE_DIR}/inc)
 
 
+if(WIN32)
+elseif(APPLE)
+endif()
